# metamath_playground2

./: CMakeLists.txt  README  meson.build
src/: meson.build  metamath_database.cpp  metamath_database.h  metamath_database_read_write.cpp  metamath_database_read_write.h  metamath_playground.cpp  named.h  tokenizer.cpp  tokenizer.h  typed_indices.h
subprojects/: adobe_source_libraries.wrap
