# Copyright 2023 Dominik Wójt
#
# This file is part of metamath_playground.
#
# SPDX-License-Identifier: MIT OR Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

executable(
  'metamath_playground',
  sources: [
    'metamath_database.cpp',
    'metamath_database.h',
    'metamath_database_read_write.cpp',
    'metamath_database_read_write.h',
    'metamath_playground.cpp',
    'named.h',
    'tokenizer.cpp',
    'tokenizer.h',
    'typed_indices.h'],
  dependencies: adobe_source_libraries_dependency
)
